# clanu

./: .gitignore  projet github.txt
LR_MNIST/: CMakeLists.txt  README.md  tau.bat  testing.bat  training.bat
LR_MNIST-Build/: CMakeCache.txt  Makefile  cmake_install.cmake
LR_MNIST-Build/docs/: Makefile  cmake_install.cmake
LR_MNIST-Build/lib/: Makefile  cmake_install.cmake
LR_MNIST-Build/src/: Makefile  cmake_install.cmake
LR_MNIST-Build/test/: Makefile  cmake_install.cmake
LR_MNIST/data/: accuracy_iter  accuracy_iter.xlsx  log.txt  theta - Copie.csv  theta.csv  theta2.csv  theta_cg - Copie.csv  theta_cg.csv  theta_cg_tau=0.2_maxIt=100_acc=82.103.csv  theta_cg_tau=0.2_maxIt=25_acc=94.465.csv  theta_cg_tau=0.2_maxIt=25_acc=95.288.csv  theta_cg_tau=0.300_acc=25.907.csv  theta_cg_tau=0.4_maxIt=100_acc=82.208.csv  theta_cg_tau=0.4_maxIt=25_acc=94.735.csv  theta_cg_tau=0.6_maxIt=100_acc=82.123.csv  theta_cg_tau=0.700_acc=82.508.csv  theta_cg_tau=0.8_maxIt=100_acc=82.195.csv  theta_cg_tau=1.0_maxIt=100_acc=81.797.csv  theta_cg_tau=1.100_acc=82.387.csv  theta_cg_tau=1.2_maxIt=100_acc=81.967.csv  theta_cg_tau=1.4_maxIt=100_acc=81.855.csv  theta_cg_tau=1.6_maxIt=100_acc=81.308.csv  theta_cg_tau=1.8_maxIt=100_acc=81.973.csv  theta_cg_tau=2.0_maxIt=100_acc=81.930.csv  theta_to_img.m
LR_MNIST/docs/: CMakeLists.txt  Doxyfile.in
LR_MNIST/lib/: CMakeLists.txt  clanu_functions.cpp  clanu_functions.h  common_functions.cpp  common_functions.h  timing_functions.h
LR_MNIST/src/: CMakeLists.txt  mnist_test.cpp  mnist_train_influence.cpp  mnist_train_influence_iter.cpp  mnist_train_lrCgd - Copie.cpp  mnist_train_lrCgd.cpp  mnist_train_lrgd.cpp
LR_MNIST/test/: CMakeLists.txt  test_common_functions.cpp  test_common_functions_time.cpp
code_matlab/+lrc/: conjugate_gradient.m  gradient_descent.m  lrCostFunction.m  predict.m  sigmoid.m  train.m
code_matlab/+tools/: sigma.m
code_matlab/+visu/: clickDownGui.m  displayDatabase.m
code_matlab/exercise/: grad_J.asv  grad_J.m  script_ex1.asv  script_ex1.m  script_ex2.m
code_matlab/param/: param_ex1_2.mat  param_mnist.mat
code_matlab/scripts/: maxiter.fig  maxiter1.fig  scriptInfluenceMaxIteration.asv  scriptInfluenceMaxIteration.m  scriptInfluenceTau.m  scriptTestingLRC.m  scriptTestingLRC_gui.m  scriptTrainingLRC.m  tau.fig
